aks/manifests/07/payments/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lab-c-payments
  labels:
    data-classification: pci
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/audit: restricted
